--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Eventos Chiapas</title>
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
@@ -15,10 +16,9 @@
   </header>
 
   <nav>
-    <a href="#">Inicio</a>
-    <a href="#">¿Qué es?</a>
-    <a href="#">Calendario</a>
-    <a href="#">Contacto</a>
+    <a href="index.html">Inicio</a>
+    <a href="eventos.html">Eventos</a>
+    <a href="contactos.html">Contacto</a>
   </nav>
 
   <main>
