Index con estilo

--- a/index.html
+++ b/index.html
@@ -22,29 +22,38 @@
   </nav>
 
   <main>
-    <section>
-      <h2>¿Qué es Eventos Chiapas?</h2>
-      <p>Eventos Chiapas es una plataforma digital dedicada a promover actividades culturales, sociales, deportivas y
-        educativas que se realizan en el estado de Chiapas.</p>
-      <p>El objetivo es facilitar el acceso a la información de eventos actuales y futuros, tanto para residentes como
-        para visitantes.</p>
+    <section class="con-imagen">
+      <div class="texto">
+        <h2>¿Qué es Eventos Chiapas?</h2>
+        <p>Eventos Chiapas es una plataforma digital dedicada a promover actividades culturales, sociales, deportivas y
+          educativas que se realizan en el estado de Chiapas.</p>
+        <p>El objetivo es facilitar el acceso a la información de eventos actuales y futuros, tanto para residentes como
+          para visitantes.</p>
+      </div>
+      <img src="img/evento1.png" alt="Imagen de presentación" class="imagen">
     </section>
 
-    <section>
-      <h2>¿Qué tipo de eventos encontrarás?</h2>
-      <ul>
-        <li>Festivales tradicionales y culturales</li>
-        <li>Conciertos y presentaciones artísticas</li>
-        <li>Ferias, exposiciones y mercados locales</li>
-        <li>Conferencias, talleres y actividades académicas</li>
-        <li>Eventos deportivos y recreativos</li>
-      </ul>
+    <section class="con-imagen">
+      <div class="texto">
+        <h2>¿Qué tipo de eventos encontrarás?</h2>
+        <ul>
+          <li>Festivales tradicionales y culturales</li>
+          <li>Conciertos y presentaciones artísticas</li>
+          <li>Ferias, exposiciones y mercados locales</li>
+          <li>Conferencias, talleres y actividades académicas</li>
+          <li>Eventos deportivos y recreativos</li>
+        </ul>
+      </div>
+      <img src="img/evento2.png" alt="Tipos de eventos" class="imagen">
     </section>
 
-    <section>
-      <h2>¿Cómo funciona?</h2>
-      <p>Los organizadores pueden enviar sus eventos para ser publicados. Los usuarios pueden navegar el calendario,
-        filtrar por categoría o localidad, y recibir recordatorios personalizados.</p>
+    <section class="con-imagen">
+      <div class="texto">
+        <h2>¿Cómo funciona?</h2>
+        <p>Los organizadores pueden enviar sus eventos para ser publicados. Los usuarios pueden navegar el calendario,
+          filtrar por categoría o localidad, y recibir recordatorios personalizados.</p>
+      </div>
+      <img src="img/evento3.png" alt="Funcionamiento del sitio" class="imagen">
     </section>
   </main>
 
