links de las páginas de eventos y contacto en el navbar

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <h1>Eventos Chiapas</h1>
     <p>La plataforma para conocer y compartir eventos en todo Chiapas</p>
   </header>
-
   <nav>
     <a href="index.html">Inicio</a>
     <a href="eventos.html">Eventos</a>
-    <a href="contactos.html">Contacto</a>
+    <a href="contactos.html">Contactos</a>
   </nav>
 
   <main>
