--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Eventos Chiapas es una plataforma digital dedicada a promover actividades culturales, sociales, deportivas y
           educativas que se realizan en el estado de Chiapas.</p>
         <p>El objetivo es facilitar el acceso a la información de eventos actuales y futuros, tanto para residentes como
-          para visitantes.</p>
+          para visitantes nuevos y extrangeros.</p>
       </div>
       <img src="img/evento1.png" alt="Imagen de presentación" class="imagen">
     </section>
